# CERN-Summer-2019

MMM/: CMakeLists.txt
MMM/src/: BasicMM.cpp
MMM/src/detail/: MMBase.hpp
MyProj/: CMakeLists.txt
MyProj/src/: Try.cpp  TryAlgorithm.cpp  TryAlgorithm.hpp
Outputs/: Comparator.ipynb  Viewer.ipynb  mapped-binned-proto.json  proto-layer-material-20.json  proto-layer-material-40.json  proto-layer-material.json
PMM/src/detail/: PlyWriterExampleBase.hpp
PlyWriterOld/src/: PlyWriterExample.cpp
PlyWriterOld/src/detail/: PlyWriterExampleBase.hpp
plys/: binned (few hits).ply  not binned.ply  op_40_1000_half.ply  sensitive surfaces.ply
